Fix onion skinning increment/decrement in dark mode

--- a/addons/onion-skinning/style.css
+++ b/addons/onion-skinning/style.css
@@ -88,3 +88,9 @@
 [theme="dark"] .sa-onion-image[data-image="settings"] {
   filter: invert(1);
 }
+[theme="dark"] .sa-onion-image[data-image="increment"] {
+  filter: none;
+}
+[theme="dark"] .sa-onion-image[data-image="decrement"] {
+  filter: none;
+}
